package group6.entity;

/**
 * NodeType represents the type of a Node in the system.
 */
public enum NodeType {
  SENSOR,   // physical device to me sensor
  CONTROL, // farmers controlpanel
}