package group6.entity.node;

/**
 * SensorNode represents a node that contains sensors/actuators in the system.
 * It extends the abstract Node class.
 * 
 * @author dotDennis
 * @since 0.1.0
 */
public class SensorNode extends Node {
    // TODO: Implement SensorNode
    public SensorNode(String nodeId, NodeType nodeType) {
        super(nodeId, nodeType);
    }
}
